# CourseWork2

./: .gitignore  CMakeLists.txt  Makefile  main.c
BmpLib/: bmp_24.h  bmp_parser.c  bmp_parser.h  bmp_structures.h
CLI/: canvas_parser.c  circle_parser.c  circle_parser.h  cli.c  cli.h  command_parser.c  command_parser.h  frame_parser.c  frame_parser.h  line_parser.c  polygon_parser.c  query_structures.h  rectangle_parser.c  rectangle_parser.h  rotate_parser.c  rotate_parser.h  types_parser.c  types_parser.h
Draw/: circle.c  circle.h  frame.c  frame.h  image.c  image.h  rectangle.c  rectangle.h  rotate.c  rotate.h
Draw/Shapes/: circle.c  circle.h  ellipse.c  ellipse.h  polygon.c  polygon.h  rectangle.c  rectangle.h
ExceptionHandler/: error_handler.c  error_handler.h  handler.c  handler.h  logger.c  logger.h
Geometry/: matrix.c  matrix.h  structures.h
Shared/: structures.h
Tests/: test_BmpLib.c  test_BmpLib.h  test_cli.c  test_cli.h
Validator/: validator.c  validator.h
interfaces/BMPLib/: bmp_parser.h
interfaces/CLI/: circle_parser.h  cli.h  frame_parser.h  rectangle_parser.h  rotate_parser.h  types_parser.h
interfaces/Declarations/: structures.h
interfaces/Draw/: rectangle.h
interfaces/ExceptionHandler/: error_handler.h  guide  hint.h
interfaces/Geometry/: matrix.h
interfaces/Utils/: circle.h  matrix.h  rectangle.h  rotate.h
source/BmpLib/: bmp_parser.c
source/CLI/: circle_parser.c  cli.c  frame_parser.c  rectangle_parser.c  rotate_parser.c  types_parser.c
source/Draw/: rotate.c
source/ExceptionHandler/: error_handler.c  hint.c
source/Geometry/: matrix.c
source/Utils/: circle.c  matrix.c  rectangle.c  rotate.c
